libycp/testsuite/tests/statements/Case.ycp
{
	case 1: return 1;	// error: case outside of switch
	return 0;
}
